aligns images and updates label in LaunchVC

--- a/fourCorners/Views/Base.lproj/Main.storyboard
+++ b/fourCorners/Views/Base.lproj/Main.storyboard
@@ -19,14 +19,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nameLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mbp-Me-Oik">
-                                <rect key="frame" x="165" y="464.5" width="84" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="138.5" y="451" width="137.5" height="48"/>
+                                <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="30"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gud-fl-zaf">
-                                <rect key="frame" x="168" y="505.5" width="78" height="30"/>
-                                <state key="normal" title="startButton"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <connections>
                                     <segue destination="BHz-Bi-Yi8" kind="show" identifier="launchToSettingsSegue" id="4vo-vo-OKq"/>
                                 </connections>
@@ -38,10 +37,10 @@
                                 <rect key="frame" x="227" y="58" width="187" height="317"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MOi-ef-jK6">
-                                <rect key="frame" x="0.0" y="575" width="187" height="287"/>
+                                <rect key="frame" x="0.0" y="575" width="187" height="307"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xd8-cI-IbZ">
-                                <rect key="frame" x="227" y="575" width="187" height="287"/>
+                                <rect key="frame" x="227" y="575" width="207" height="287"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
@@ -52,19 +51,21 @@
                             <constraint firstItem="DFI-iO-eut" firstAttribute="leading" secondItem="n8l-4e-e6o" secondAttribute="centerX" constant="20" id="EWc-hc-EwH"/>
                             <constraint firstItem="LYO-qa-a4E" firstAttribute="leading" secondItem="n8l-4e-e6o" secondAttribute="leading" constant="-25" id="EXr-NM-QLY"/>
                             <constraint firstItem="LYO-qa-a4E" firstAttribute="bottom" secondItem="n8l-4e-e6o" secondAttribute="centerY" constant="-100" id="FjN-AF-Pah"/>
-                            <constraint firstItem="n8l-4e-e6o" firstAttribute="bottom" secondItem="MOi-ef-jK6" secondAttribute="bottom" id="HYN-qM-O0U"/>
+                            <constraint firstItem="n8l-4e-e6o" firstAttribute="bottom" secondItem="MOi-ef-jK6" secondAttribute="bottom" constant="-20" id="HYN-qM-O0U"/>
                             <constraint firstItem="xd8-cI-IbZ" firstAttribute="leading" secondItem="n8l-4e-e6o" secondAttribute="centerX" constant="20" id="KQh-wT-Fp0"/>
                             <constraint firstItem="Mbp-Me-Oik" firstAttribute="centerX" secondItem="n8l-4e-e6o" secondAttribute="centerX" id="NR2-KE-C3q"/>
-                            <constraint firstItem="Gud-fl-zaf" firstAttribute="top" secondItem="Mbp-Me-Oik" secondAttribute="bottom" constant="20" id="NhR-Vr-5pf"/>
                             <constraint firstItem="DFI-iO-eut" firstAttribute="top" secondItem="n8l-4e-e6o" secondAttribute="top" constant="-30" id="R2c-os-sFD"/>
                             <constraint firstItem="LYO-qa-a4E" firstAttribute="trailing" secondItem="n8l-4e-e6o" secondAttribute="centerX" constant="-20" id="RpR-kC-egR"/>
-                            <constraint firstItem="n8l-4e-e6o" firstAttribute="trailing" secondItem="xd8-cI-IbZ" secondAttribute="trailing" id="VdY-dn-lzU"/>
-                            <constraint firstItem="Gud-fl-zaf" firstAttribute="centerX" secondItem="Mbp-Me-Oik" secondAttribute="centerX" id="WI3-5A-vpD"/>
+                            <constraint firstItem="Gud-fl-zaf" firstAttribute="top" secondItem="n8l-4e-e6o" secondAttribute="top" id="SHl-4b-SOJ"/>
+                            <constraint firstItem="n8l-4e-e6o" firstAttribute="trailing" secondItem="xd8-cI-IbZ" secondAttribute="trailing" constant="-20" id="VdY-dn-lzU"/>
                             <constraint firstItem="MOi-ef-jK6" firstAttribute="top" secondItem="n8l-4e-e6o" secondAttribute="centerY" constant="100" id="XSZ-pQ-Icb"/>
+                            <constraint firstItem="n8l-4e-e6o" firstAttribute="bottom" secondItem="Gud-fl-zaf" secondAttribute="bottom" id="ZVY-W9-9vm"/>
                             <constraint firstItem="DFI-iO-eut" firstAttribute="bottom" secondItem="n8l-4e-e6o" secondAttribute="centerY" constant="-100" id="dwT-Is-mCb"/>
+                            <constraint firstItem="n8l-4e-e6o" firstAttribute="trailing" secondItem="Gud-fl-zaf" secondAttribute="trailing" id="hN7-UF-sXH"/>
                             <constraint firstItem="n8l-4e-e6o" firstAttribute="trailing" secondItem="DFI-iO-eut" secondAttribute="trailing" id="jMm-V5-JcZ"/>
                             <constraint firstItem="MOi-ef-jK6" firstAttribute="leading" secondItem="n8l-4e-e6o" secondAttribute="leading" id="kVC-dA-7qZ"/>
                             <constraint firstItem="MOi-ef-jK6" firstAttribute="trailing" secondItem="n8l-4e-e6o" secondAttribute="centerX" constant="-20" id="s5i-UB-JA7"/>
+                            <constraint firstItem="Gud-fl-zaf" firstAttribute="leading" secondItem="n8l-4e-e6o" secondAttribute="leading" id="x7c-hp-QEN"/>
                             <constraint firstItem="Mbp-Me-Oik" firstAttribute="centerY" secondItem="n8l-4e-e6o" secondAttribute="centerY" id="yb3-Fo-nGx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="n8l-4e-e6o"/>
@@ -73,6 +74,7 @@
                     <connections>
                         <outlet property="bottomLeftImage" destination="MOi-ef-jK6" id="92h-LD-hwU"/>
                         <outlet property="bottomRightImage" destination="xd8-cI-IbZ" id="ebr-w6-rX6"/>
+                        <outlet property="nameLabel" destination="Mbp-Me-Oik" id="lcx-Zf-wlV"/>
                         <outlet property="topLeftImage" destination="LYO-qa-a4E" id="uWL-Nk-S8X"/>
                         <outlet property="topRightImage" destination="DFI-iO-eut" id="PXL-KF-DdW"/>
                     </connections>
